<resources>
    <string name="app_name">চাষি</string>
    <string name="highligh_text">এর রোগের লিস্ট</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">প্রধান পাতা</string>
    <string name="menu_gallery">কৃষি পণ্য</string>
    <string name="menu_slideshow">রোগ সমূহ</string>
    <string name="menu_tools">কৃষি জিজ্ঞাসা</string>
    <string name="menu_detect">রোগ চিহ্নিতকরণ</string>
    <string name="menu_share">অ্যাপ তথ্য</string>
    <string name="menu_profile">প্রোফাইল</string>
    <string name="menu_send">Send</string>
    <string name="disease_agam_dhosha">আলুর আগাম ধ্বসা রোগ</string>
    <string name="disease_morok">আলুর মরক রোগ</string>
    <string name="disease_spot">মরিচের ব্যাক্টেরিয়াজনিত পাতায় দাগ</string>
    <string name="healthy">healthy</string>
</resources>
