<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.chashi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.chashi.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <activity
        android:id="@+id/nav_slideshow"
        android:name="com.example.chashi.Disease"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/activity_disease" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.chashi.ui.forums.ForumFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/nav_detect"
        android:name="com.example.chashi.ScanDiseaseCropsFragment"
        android:label="@string/menu_detect"
        tools:layout="@layout/fragment_scan_disease_crops" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.chashi.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.chashi.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.chashi.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>